2024-11-23  Oliver Kiddle  <opk@zsh.org>

	* 53244: Test/Y01completion.ztst: rename user in test case to
	reduce likelihood of failure due to user existing

2024-11-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53238 (+53239 Mikael): Completion/Redhat/Command/_dnf,
	Completion/Redhat/Command/_dnf5: support dnf5

2024-11-12  Bart Schaefer  <schaefer@zsh.org>

	* Karel Balej: 53240, 53241: Completion/Unix/Command/_mpc:
	updated completions for mpc add, mpc insert

2024-11-12  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53137 + 53213: Doc/Makefile.in, Doc/intro.ms, allow creating
	intro.html

2024-11-11  Eric Cook  <llua@gmx.com>

	* 53144: Completion/Unix/Command/_sysctl:
	support completion with the dot delimiter on linux

	* Matthew Martin: 53174 + comments:
	Completion/Base/Utility/_as_if: complete `as if'
	a different command were being completed

2024-11-05  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53209 + comments + test: Src/params.c, Test/D04parameter.ztst:
	do not unmetafy via string pointers into global parameter table

2024-10-16  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53146: Src/exec.c: trace flags cannot be copied from an
	undefined function (cf. workers/45131)

2024-09-02  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 53134: configure.ac: use -undefined dynamic_lookup on recent macOS

2024-09-21  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53103: Test/A08time.ztst: fix spurious test failure on Solaris

2024-09-18  Oliver Kiddle  <opk@zsh.org>

	* Philip Sequeira: 53095: Completion/Unix/Command/_chmod,
	Completion/Unix/Command/_chown: fix completion for chmod/chown
	--reference with escaped filename

	* 53094: configure.ac, Src/signals.h: remove unused autoconf tests

	* 53093: Src/input.c: silence compiler warning when USE_LSEEK
	is not defined

	* 53092: Src/init.c: silence deprecated header warning on Linux

2024-09-14  Bart Schaefer  <schaefer@zsh.org>

	* 53088: Src/exec.c, Src/jobs.c, Test/A01grammar.ztst,